# AutoRoll

./: .gitignore  AutoRole.py  Dockerfile  README.md  Run Bot.lnk  bot.py  compose.yaml  config.yaml  docker-compose.yml  funny_stats.yaml  pyproject.toml  queue.yaml  requirements.txt  run.sh  test.py  xp_stats.yaml
.github/workflows/: autoUpdate.yml
TEST_CLIENT/: bot.py
TEST_CLIENT/cogs/: schedule.py
cogs/: afk.py  auto_roles.py  autorole  autorole.py  funny_score.py  megamind.py  music.py  pie.py  roles.py  roles_old_commands.py  template.py  test.py  translate.py  warning.py  xp_score.txt
old stats/: funny_stats.yaml  xp_stats.yaml
src/: .env  bot.py  requirements.txt  run.sh
src/cogs/: afk.py  megamind.py  misc.py  roles.py  stats.py  template.py  test.py
src/cogs/inactive/: test.py  weeklyVote.py
src/cogs/resources/inactive/: weeklyVote.py
