[tool.poetry]
name = "autoroll"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
async-timeout = "^4.0.2"
asyncio = "^3.4.3"
attrs = "^22.1.0"
certifi = "^2022.12.7"
charset-normalizer = "^2.1.1"
contourpy = "^1.0.5"
cycler = "^0.11.0"
fonttools = "^4.38.0"
frozenlist = "^1.3.1"
idna = "^3.3"
kiwisolver = "^1.4.4"
matplotlib = "^3.6.1"
multidict = "^6.0.2"
nextcord = "^2.1.0"
numpy = "^1.23.4"
packaging = "^21.3"
Pillow = "^9.2.0"
psutil = "^5.9.4"
python-dateutil = "^2.8.2"
requests = "^2.28.2"
six = "^1.16.0"
typing_extensions = "^4.3.0"
urllib3 = "^1.26.14"
yarl = "^1.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
